# sr_plugin

./: CMakeLists.txt  CMakePresets.json  paths.txt  plugin.cpp  plugin.hpp
samples/: L.m4a
